添加编译文件忽略，调整CMakeLists.txt和main.cpp以通过colcon build编译

--- a/foundationpose_service/CMakeLists.txt
+++ b/foundationpose_service/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
 project(foundationpose_service)
 
+# CUDA 架构设置
+cmake_policy(SET CMP0104 NEW)
+set(CMAKE_CUDA_ARCHITECTURES 86 87)
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
@@ -10,6 +14,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(OpenCV REQUIRED)  # 添加 OpenCV
 find_package(dros_common_interfaces REQUIRED)
 
@@ -19,6 +24,7 @@ include_directories(
 )
 
 add_subdirectory(src/detection_6d_foundationpose)
+set(ENABLE_TENSORRT ON)
 add_subdirectory(src/easy_deploy_tool)
 add_executable(main src/main.cpp)
 
@@ -28,9 +34,16 @@ target_include_directories(main PUBLIC
 
 target_compile_features(main PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 
+target_compile_options(main PRIVATE
+  $<$<COMPILE_LANGUAGE:CUDA>:--diag-suppress=20012>
+)
+
+
+
 ament_target_dependencies(
   main
   rclcpp
+  geometry_msgs
   sensor_msgs
   cv_bridge
   OpenCV
