--- a/foundationpose_service/package.xml
+++ b/foundationpose_service/package.xml
@@ -14,6 +14,7 @@
   <depend>sensor_msgs</depend>
   <depend>OpenCV</depend>
   <depend>dros_common_interfaces</depend>
+  <depend>auto_sam_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
